--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
-    "vue": "^2.7.7"
+    "bootstrap": "^5.3.3",
+    "bootstrap-vue": "^2.23.1",
+    "vue": "^2.7.16",
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-legacy": "^2.0.0",
